ejercicio15/ExprParser.py
# Generated from ./Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'nmap'", "'tcpdump'", "'journalctl'", 
                     "'dig'", "'curl'", "'grep'", "'sudo'", "'ss'", "'ufw'", 
                     "'deny'", "'from'" ]

    symbolicNames = [ "<INVALID>", "NMAP", "TCPDUMP", "JOURNAL", "DIG", 
                      "CURL", "GREP", "SUDO", "SS", "UFW", "DENY", "FROM", 
                      "FLG", "IPADDRESS", "DOM", "RT", "IDT", "NUM", "WS", 
                      "STR" ]

    RULE_root = 0
    RULE_expr = 1

    ruleNames =  [ "root", "expr" ]

    EOF = Token.EOF
    NMAP=1
    TCPDUMP=2
    JOURNAL=3
    DIG=4
    CURL=5
    GREP=6
    SUDO=7
    SS=8
    UFW=9
    DENY=10
    FROM=11
    FLG=12
    IPADDRESS=13
    DOM=14
    RT=15
    IDT=16
    NUM=17
    WS=18
    STR=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.expr()
            self.state = 5
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NMAP(self):
            return self.getToken(ExprParser.NMAP, 0)

        def FLG(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.FLG)
            else:
                return self.getToken(ExprParser.FLG, i)

        def IPADDRESS(self):
            return self.getToken(ExprParser.IPADDRESS, 0)

        def SS(self):
            return self.getToken(ExprParser.SS, 0)

        def SUDO(self):
            return self.getToken(ExprParser.SUDO, 0)

        def TCPDUMP(self):
            return self.getToken(ExprParser.TCPDUMP, 0)

        def IDT(self):
            return self.getToken(ExprParser.IDT, 0)

        def NUM(self):
            return self.getToken(ExprParser.NUM, 0)

        def CURL(self):
            return self.getToken(ExprParser.CURL, 0)

        def DOM(self):
            return self.getToken(ExprParser.DOM, 0)

        def DIG(self):
            return self.getToken(ExprParser.DIG, 0)

        def JOURNAL(self):
            return self.getToken(ExprParser.JOURNAL, 0)

        def GREP(self):
            return self.getToken(ExprParser.GREP, 0)

        def STR(self):
            return self.getToken(ExprParser.STR, 0)

        def RT(self):
            return self.getToken(ExprParser.RT, 0)

        def UFW(self):
            return self.getToken(ExprParser.UFW, 0)

        def DENY(self):
            return self.getToken(ExprParser.DENY, 0)

        def FROM(self):
            return self.getToken(ExprParser.FROM, 0)

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 7
                self.match(ExprParser.NMAP)
                self.state = 8
                self.match(ExprParser.FLG)
                self.state = 9
                self.match(ExprParser.IPADDRESS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 10
                self.match(ExprParser.SS)
                self.state = 11
                self.match(ExprParser.FLG)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 12
                self.match(ExprParser.SUDO)
                self.state = 13
                self.match(ExprParser.TCPDUMP)
                self.state = 14
                self.match(ExprParser.FLG)
                self.state = 15
                self.match(ExprParser.IDT)
                self.state = 16
                self.match(ExprParser.FLG)
                self.state = 17
                self.match(ExprParser.NUM)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 18
                self.match(ExprParser.CURL)
                self.state = 19
                self.match(ExprParser.FLG)
                self.state = 20
                self.match(ExprParser.DOM)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 21
                self.match(ExprParser.DIG)
                self.state = 22
                self.match(ExprParser.IDT)
                self.state = 23
                self.match(ExprParser.DOM)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 24
                self.match(ExprParser.JOURNAL)
                self.state = 25
                self.match(ExprParser.FLG)
                self.state = 26
                self.match(ExprParser.IDT)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 27
                self.match(ExprParser.GREP)
                self.state = 28
                self.match(ExprParser.STR)
                self.state = 29
                self.match(ExprParser.RT)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 30
                self.match(ExprParser.SUDO)
                self.state = 31
                self.match(ExprParser.UFW)
                self.state = 32
                self.match(ExprParser.DENY)
                self.state = 33
                self.match(ExprParser.FROM)
                self.state = 34
                self.match(ExprParser.IPADDRESS)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 35
                self.match(ExprParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





